@@ -5,6 +5,8 @@
   rel="alternate" by default.
 - Fixed issue #13109: Fixed RSS1 (RDF) parsing when the "resource" attribute
   is specified as "rdf:resource".
+- Fixed iTunes module elements handling if using a different prefix than
+  'itunes'.
 
 
 1.1beta1 - Tuesday 27 May 2008
